# Playground

./: README.md
cmake/: fetch_external_dependencies.cmake
projects/: CMakeLists.txt
projects/SystemsComponentsExample_01/: CMakeLists.txt  main.cpp
projects/SystemsComponentsExample_02/: CMakeLists.txt  components.h  main.cpp  system_a.cpp  system_a.h  system_b.cpp  system_b.h  system_definition.h
projects/SystemsComponentsExample_03/: CMakeLists.txt  main.cpp  system_b.cpp  system_definition.h
